# waves

./: .gitignore  Cargo.toml  LICENSE_MIT
single-thread-executor/: Cargo.toml
waves/: Cargo.toml
waves/src/: lib.rs  utils.rs
waves/src/application/: animation_loop.rs  mod.rs  pipeline.rs  quad.rs  shaders.rs  simulate.rs  vertex.rs
waves/src/application/shaders/: quad.frag  quad.vert  texture.frag  waves.frag
waves/src/render_core/: animation.rs  animation_params.rs  canvas.rs  frame_sequencer.rs  image.rs  mesh.rs  mod.rs  ping_pong_buffer.rs  shader.rs  texture.rs  uniform.rs  viewport.rs
waves/www/: index.html  index.js  style.css
