[package]
name = "waves"
version = "0.1.0"
authors = ["Jacob Rice <jacob.rice.systems@gmail.com"]
edition = "2021"
license-file = "LICENSE_MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
single-thread-executor = { path = "../single-thread-executor", version = "0.1.0" }

async-channel = "2.2"
async-std = "1.12"
image = "0.25"
image-base64-wasm = "0.6"
itertools = "0.12"
js-sys = "0.3.57"
memoffset = "0.9.0"
nalgebra-glm = "0.18.0"
paste = "1.0.14"
phf = { version = "0.11", features = ["macros"] }
png = "0.17"
regex = "1"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Blob',
    'Crypto',
    'Document',
    'Element',
    'EventListener',
    'HtmlCanvasElement',
    'KeyboardEvent',
    'MouseEvent',
    'Performance',
    'Response',
    'Request',
    'RequestInit',
    'RequestMode',
    'Touch',
    'TouchList',
    'TouchEvent',
    'WebGlBuffer',
    'WebGlFramebuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlTexture',
    'WebGlUniformLocation',
    'WheelEvent',
    'Window',
]


[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O', '-g']

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4', '-g']  # TODO: -g seems to fix the name mangling problem

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
